--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
     "faunadb": "^4.7.1",
+    "fs": "^0.0.1-security",
     "luxon": "^2.4.0",
     "markdown-it": "^13.0.1",
-    "markdown-it-anchor": "^8.6.4"
+    "markdown-it-anchor": "^8.6.4",
+    "url": "^0.11.0"
   }
 }
