--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@11ty/eleventy-navigation": "^0.3.3",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
+    "bottleneck": "^2.19.5",
     "faunadb": "^4.7.1",
     "fs": "^0.0.1-security",
     "luxon": "^2.4.0",
