--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,7 @@
   publish = "_site"
   command = "npm run build"
   functions = "./functions"
+[[redirects]]
+  from = "/getviewings"
+  to = "/.netlify/functions/getviewings"
+  status = 200
