--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
     "bottleneck": "^2.19.5",
     "faunadb": "^4.7.1",
+    "firebase": "^9.21.0",
     "fs": "^0.0.1-security",
     "luxon": "^2.4.0",
     "markdown-it": "^13.0.1",
